================================================================


RELEASE NOTES
=============


2.41.1 - September ??, 2010

    Corrected an optimization bug in the compilation of grammar rules that
    resulted in failed compilations whenever the body of a grammar rule was
    equivalent to fail/0. Thanks to Ulrich Neumerkel for the bug report.


2.41.0 - September 15, 2010

    Added experimental support for coinductive predicates to the Logtalk
    compiler using a coinductive/1 directive. Requires a back-end Prolog
    compiler providing minimal support for cyclic terms (currently, YAP,
    CxProlog, ECLiPSe, SICStus Prolog, and SWI-Prolog). Thanks to Gopal
    Gupta, Neda Saeedloei, Feliks Kluzniak, Ajay Bansal, and Vitor Santos
    Costa for feedback and implementation suggestions.

    Added a "coinductive" predicate property.

    Added a "coinduction" read-only flag.

    Added a new Logtalk built-in predicate, logtalk_load_context/2, similar
    to the prolog_load_context/2 built-in predicate found in several Prolog
    compilers, in order to provide access to the compilation/loading context.
    The initial set of supported context keys is {entity_name, entity_prefix,
    entity_type, file, directory, term_position}. The term_position key is
    only supported in back-end Prolog compilers that provide the start and
    end lines of a read term.

    Simplified the Logtalk compiler by using stream aliases.

    Updated the implementation of the create_object/4 and create_category/4
    built-in predicates in order to also support the definition of an initial
    set of grammar rules.

    Corrected a bug in the runtime error handler that would result in entity
    existence errors being reported as (internal) predicate existence errors.

    Corrected a bug where the protocols implemented by the built-in object
    "logtalk" would not be returned by the implements_protocol/2-3 built-in
    predicates.
